# kompose-fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
k8s/: api-deployment.yaml  api-service.yaml
src/app/: main.py
src/config/: settings.py
