[tool.poetry]
name = "kompose-fastapi"
version = "0.1.0"
description = ""
authors = ["Abdullah Alqahtani <anqorithm@protonmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"